--- a/website/docs/tailwindcss/index.mdx
+++ b/website/docs/tailwindcss/index.mdx
@@ -8,12 +8,12 @@ sidebar_position: 1
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
 
-## TL;DR
+## TL;DR（为什么读这份专题）
 
 - 原子化 CSS 是工程化的折衷：用小而精的类名替代组件级样式，降低认知和维护成本，同时配合设计 token、variants 与摇树优化。
-- Tailwind 的强项在生态：JIT、variants、插件、`tailwind-merge`/`clsx`/`cva`/`tailwind-variants` 组合，以及社区资产（预设、主题、UI 套件）。
-- 不是银弹：需要约束（设计系统、class 组织、content 精准匹配），否则会出现 class 爆炸、可读性差、设计漂移。
-- AI 友好：原子类是可组合的语料，配合提示模板和 lint/merge 校验，可以让模型安全地产出 UI。
+- Tailwind 的强项在生态：JIT、variants、插件、`tailwind-merge`/`clsx`/`cva`/`tailwind-variants` 组合，以及可直接复用的社区资产（预设、主题、UI 套件）。
+- 它不是银弹：缺少约束时会 class 爆炸、可读性差、设计漂移。本专题会给出「少走弯路」的做法。
+- AI 友好：原子类是可组合的语料，配合提示模板和 lint/merge 校验，可以让模型安全地产出 UI，并且可被人类审阅。
 
 ## 你会获得什么
 
@@ -21,7 +21,9 @@ import TabItem from '@theme/TabItem'
 - 方法论：Tailwind 设计理念、与 UnoCSS 的取舍、`tailwind-merge`、`cva`、`tailwind-variants` 的封装策略。
 - 最佳实践：设计 token、`data-*` 驱动的 variants、`group/peer/aria` 组合、性能/体积验证、代码评审清单。
 - AI 友好工作流：可直接复用的提示模板、常见错误与防护、自动化校验建议。
-- Demo：React（shadcn/ui 风格）与 Vue（shadcn-vue/reka-ui 风格）的小型页面，含主题切换、响应式卡片、表单/数据块示例。
+- Demo：React（shadcn/ui 风格）与 Vue（shadcn-vue/reka-ui 风格）的小型页面，含主题切换、响应式卡片、表单/数据块示例，可作为「让 AI 续写」的基准。
+
+> 阅读顺序建议：如果你正在做迁移或评审代码，先看「最佳实践」；如果你要说服团队或输出分享，先看「历史与演进」「设计理念与对比」。
 
 ## 导航
 
