--- a/website/docs/tailwindcss/index.mdx
+++ b/website/docs/tailwindcss/index.mdx
@@ -31,6 +31,7 @@ import TabItem from '@theme/TabItem'
 2. [Tailwind 设计理念与对比](tailwindcss/tailwind-core)
 3. [原子化 CSS 最佳实践](tailwindcss/best-practices)
 4. [AI 友好提示与 Demo 运行指南](tailwindcss/ai-friendly-and-demos)
+5. [各样式方案 Demo 与产物对照](tailwindcss/demos)
 
 ## React/Vue 代码快速预览
 
