--- a/website/docs/tailwindcss/ai-friendly-and-demos.mdx
+++ b/website/docs/tailwindcss/ai-friendly-and-demos.mdx
@@ -5,7 +5,7 @@ description: 提示模板、校验链与 React/Vue 示例运行方式
 sidebar_position: 5
 ---
 
-## TL;DR（让模型写得像人）
+## 让模型写得像人
 
 - 原子类的可组合性降低了 AI 生成的复杂度，但要给足「轨道」：提示模板、黑名单/白名单、`tailwind-merge`/lint 校验链、固定的 tokens/variants。
 - React/Vue Demo 在 `apps/react-app`、`apps/vue-app`，包含主题切换、卡片/表单/数据块，`cva`/`tailwind-variants` 思路都能直接看到。
