--- a/website/docs/tailwindcss/index.mdx
+++ b/website/docs/tailwindcss/index.mdx
@@ -8,7 +8,7 @@ sidebar_position: 1
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
 
-## TL;DR（为什么读这份专题）
+## 为什么读这份专题
 
 - 原子化 CSS 是工程化的折衷：用小而精的类名替代组件级样式，降低认知和维护成本，同时配合设计 token、variants 与摇树优化。
 - Tailwind 的强项在生态：JIT、variants、插件、`tailwind-merge`/`clsx`/`cva`/`tailwind-variants` 组合，以及可直接复用的社区资产（预设、主题、UI 套件）。
