--- a/website/docs/tailwindcss/tailwind-core.mdx
+++ b/website/docs/tailwindcss/tailwind-core.mdx
@@ -5,7 +5,7 @@ description: Tailwind 的核心特性、与 UnoCSS 的取舍，以及 tailwind-m
 sidebar_position: 3
 ---
 
-## TL;DR（更像实战笔记）
+## 更像实战笔记
 
 - Tailwind 把「设计 token → 类名 → 插件 → 产物」做成闭环，加上 `tailwind-merge`/`cva`/`tailwind-variants`/IDE 提示，默认路就很宽；如果不想自己养 preset/merge 规则，就选它。
 - UnoCSS 灵活得像乐高：任意规则、任意 preset，但 merge/类型提示要自己兜底，团队需要有人养规则库；适合愿意自定义、且已有内部 preset 的团队。
